Move tasks for GC tests to micrometer-core